# polymarket-sports-copy-trading-bot

./: .env.example  .gitignore  Cargo.toml  config.example.json  package-lock.json  package.json  readme.md  tsconfig.json
docs/: sports-tags-by-type.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/sports/tree/: route.ts
frontend/app/copy-trading/: CopyTradingPanel.tsx  page.tsx
frontend/app/manual-trading/: ManualTradingForm.tsx  ManualTradingPanel.tsx  page.tsx
frontend/app/markets/[slug]/: BackLink.tsx  MarketChart.tsx  page.tsx
frontend/app/sports/: SportsTree.tsx  SportsTreeSection.tsx  page.tsx
frontend/app/sports/[tagId]/: LiveSlugCards.tsx  page.tsx
frontend/app/traders/: page.tsx
frontend/app/traders/[wallet]/: TraderDateRangeLinks.tsx  TraderHistoryChart.tsx  page.tsx
frontend/components/: AppShell.tsx  Sidebar.tsx  SidebarSportsTree.tsx
frontend/lib/: polymarket.ts
src/: api-data.ts  api.ts  clob_sdk.rs  config.rs  config.ts  index.ts  lib.rs  models.ts  monitor.rs  simulation.rs  sports-tree-config.ts  trader.rs  trader.ts
