[package]
name = "polymarket-trading-bot"
version = "0.1.0"
edition = "2021"
default-run = "main_sports_trailing"

[[bin]]
name = "main_sports_trailing"
path = "src/bin/main_sports_trailing.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
alloy = { version = "1.3", features = ["full"] }
alloy-contract = "1.3"
chrono = { version = "0.4", features = ["serde"] }
libloading = "0.8"
